--- a/app/views/partials/swagger/operation.hbs
+++ b/app/views/partials/swagger/operation.hbs
@@ -9,8 +9,8 @@
   @api public
 --}}
 
-<div id="operation-{{htmlId path}}-{{htmlId method}}" class="operation panel"
-  data-traverse-target="operation-{{htmlId path}}-{{htmlId method}}">
+<div id="operation-{{htmlId path}}-{{htmlId method}}-{{htmlId summary}}" class="operation panel"
+  data-traverse-target="operation-{{htmlId path}}-{{htmlId method}}-{{htmlId summary}}">
   {{#if tags}}
     <!-- <section class="operation-tags row"> -->
       <!-- <div class="doc-copy"> -->
